Add header and text input

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="header">
+        <h1>Etch a Sketch</h1>
+        <div>
+            <input type="text" placeholder="Choose number of rows">
+        </div>
+    </div>
+
+
     <div class="gridContainer">
         
     </div>
