Add button functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Etch a Sketch</h1>
         <div>
             <input type="text" placeholder="Choose number of rows">
+            <button id="myBtn">Submit</button>
         </div>
     </div>
 
