--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <h1>Etch a Sketch</h1>
         <div>
-            <input type="text" placeholder="Choose number of rows">
+            <input id="selection" type="text" placeholder="Choose number of rows">
             <button id="myBtn">Submit</button>
         </div>
     </div>
