Add color picker bar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="toolbar small">
+        <div class="colors hidden" id="one"></div>
+        <div class="colors hidden" id="two"></div>
+        <div class="colors hidden" id="three"></div>
+        <div class="colors hidden" id="four"></div>
+        <div class="colors hidden" id="five"></div>
+        <div class="colors hidden" id="six"></div>
+        <div class="colors hidden" id="seven"></div>
+        <div class="colors hidden close" id="eight">Close</div>
+    </div>
 
     <div class="header">
         <div>
-            <input id="selection" type="text" placeholder="Choose number of rows">
+            <input id="selection" type="text" placeholder="Choose a number 1-100">
             <button id="myBtn">Submit</button>
         </div>
     </div>
