Add gradient color picker

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div class="colors hidden" id="five"></div>
         <div class="colors hidden" id="six"></div>
         <div class="colors hidden" id="seven"></div>
-        <div class="colors hidden close" id="eight">Close</div>
+     <div class="colors hidden close" id="eight">Close</div>
+    </div>
+    <div class="rgb" id="idk">
+        <input type="color">
     </div>
 
     <div class="header">
