Add indication of picked color

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="content">
         <div class="options">
             <div class="toolbar small">
+                <div class="pickedColor shown"></div>
                 <div class="colors hidden" id="one"></div>
                 <div class="colors hidden" id="two"></div>
                 <div class="colors hidden" id="three"></div>
